[package]
name = "red"
version = "0.1.0"
authors = ["awygle <awygle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.25", default-features = true }
imgui = { version = "*" }
imgui-glium-renderer = { version = "*" }
imgui-winit-support = { version = "*" }
gumdrop = "*"

